tests/machine/x/fs/closure.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/closure.fs(5,18): error FS0001: This expression was expected to have type
    obj    
but here has type
    'a -> 'c    

/workspace/mochi/tests/machine/x/fs/closure.fs(6,15): error FS0003: This value is not a function and cannot be applied
