tests/machine/x/fs/closure.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:46:25Z
open System

let makeAdder (n) =
    fun x -> x + n
let add10 = makeAdder 10
printfn "%A" (add10 7)
